# gladoid-bevy

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  gladoid_bevy.pyi  pyproject.toml
gladoid_discord/: main.py
src/: game_core.rs  lib.rs  main.rs
src/game_core/: actions.rs  events.rs  schedules.rs  structs.rs  systems.rs
src/gladoid_discord/: main.py
